--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ var part4 = [
     , "What is better, studying maths and becoming rich or wasting your money traveling the world to play a luck based meaningless children video game? "
     , "You have more acne than Kingofmars and Chuppa Cross 5 together, thus making your statement is invalid "
     , "You are the kind of player who loses to italians in online tournaments and complains about ghosting "
-    , "You are just an addicted ladder hero who plays all day but has never won an important tournament "
+    , "You are nothing but an addicted ladder hero who plays all day but has never won an important tournament "
     , "The only way someone as bad as you can win at this meaningless children video game is by spamming Rock Slide and praying for flinches "
     , "What is better, spending your weekend with your gf and family or clicking buttons on children video game events full of acne teenagers? "
 ];
