--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ var part3 = [
 
 var part4 = [
       "Even Nails with his small as fuck brain could beat you in this game. "
-    , "Come back when you win something relevant in this game. "
+    , "You cant even beat ladder idiots spamming Ashton Cox's stupid Xerneas Lunala Smeargle team, so what the hell are you talking about? "
+    , "Please come back when you finally manage to win something relevant in this game. "
     , "You are as predictable in this game as Wolfey leading Scarf Lando + Physical Attacker and switching one of them for Milotic. "
     , "Even fucking Embc29 can beat you easily in this game by smashing his giant forehead in his 3DS. "
     , "You are so dumb than not even DaWoblefet's Mechanics Monday can help you become a good player. "
