--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ var part4 = [
     , "You are as predictable in this game as Wolfey leading Scarf Lando + Physical Attacker and switching one of them for Milotic. "
     , "Even fucking Embc29 can beat you easily in this game by smashing his giant forehead in his 3DS. "
     , "You are so dumb than not even DaWoblefet's Mechanics Monday can help you become a good player. "
-    , "You are basically as good in this game as Cased Victory is good with girls (hint: his is not good at all LOL). "
+    , "You are basically as good in this game as Cased Victory is good with girls (hint: he is not good at all LOL). "
     , "Smogon would have to literally ban every Pokémon in this game except Magikarp for you to be a top player LMAO. "
     , "Please come back when you can at least win an important tournament, kiddo. "
     , "You literally played more Pokémon this weekend than me the entire month. Good job dude "
@@ -62,6 +62,7 @@ var part4 = [
     , "You are about as good in this game as Yuree is a girl irl. "
     , "Even Paul Chua randomly clicking Fake Out, Water Spout and Geomancy can beat you at this game, dude "
     , "You are more addicted in this game than Nails, Yuree and René together. Good job, my dude "
+    , "You prefer wasting your weekends going to events full of acne idiots who havent taken a shower in weeks than studying maths or finding some irl friends. ._. Good job dude "
     , "What is better, studying maths and becoming rich or wasting your money traveling the world to play a luck based meaningless children video game? "
     , "You have more acne than Kingofmars and Chuppa Cross 5 together, thus making your statement is invalid "
     , "You are the kind of player who loses to italians in online tournaments and complains about ghosting "
