--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ var part1 = [
     , "LMFAO what is this idiot talking about? This guy is basically a "
     , "Sorry, but who do you think you are? You "
     , "Sorry if I'm being rude here, but who THE FUCK asked you? This guy is just a "
-    , "Huh, dude...WHAT? No one really cares about this lol. Go get some sunlight, you've had enough internet for today, you "
+    , "Huh, dude...WHAT? No one really cares about this lol. Please go get some sunlight, you "
     , "What the hell are you talking about? Please study basic maths before talking, ok? You are nothing but a "
-    , "I didnt even read what you just said, cause all I see here is 'blablabla Im a weebo who prefers Xerneas over girls'. Imo you are just a "
+    , "I didnt even read what you just said...All I see here is 'blablabla Im a weebo who prefers Xerneas over girls'. Imo you are just a "
 ];
 
 
@@ -49,7 +49,7 @@ var part3 = [
 
 var part4 = [
       "Even Nails with his small as fuck brain could beat you in this game. "
-    , "You cant even beat ladder idiots spamming Ashton Cox's stupid Xerneas Lunala Smeargle team, so what the hell are you talking about? "
+    , "You cant even beat ladder idiots spamming Ashton Cox's Xerneas Lunala team, so what the hell are you talking about? "
     , "Please come back when you finally manage to win something relevant in this game. "
     , "You are as predictable in this game as Wolfey leading Scarf Lando + Physical Attacker and switching one of them to Milotic. "
     , "Even fucking Embc29 can beat you easily in this game by smashing his giant forehead in his 3DS. "
@@ -62,12 +62,12 @@ var part4 = [
     , "You are about as good in this game as Yuree is a girl irl. "
     , "Even Paul Chua randomly clicking Fake Out, Water Spout and Geomancy can beat you at this game, dude "
     , "You are more addicted in this game than Nails, Yuree and René together. Good job, my dude "
-    , "You prefer wasting your weekends going to events full of acne idiots who havent taken a shower in weeks than studying maths or finding some irl friends. ._. Good job dude "
-    , "What is better, studying maths and becoming rich or wasting your money traveling the world to play a luck based meaningless children video game? "
+    , "You prefer wasting your weekends going to events full of acne idiots who havent taken a shower in weeks than studying maths. Good job dude "
+    , "What is better, studying maths and getting rich or wasting your money playing a luck based meaningless children video game? "
     , "You have more acne than Kingofmars and Chuppa Cross 5 together, thus making your statement is invalid "
     , "You are the kind of player who loses to italians in online tournaments and complains about ghosting "
     , "You are nothing but an addicted ladder hero who plays all day but has never won an important tournament "
-    , "The only way someone as bad as you can win at this meaningless children video game is by spamming Rock Slide and praying for flinches "
+    , "The only way someone as bad as you can win at this meaningless children video game is by clicking Rock Slide "
     , "What is better, spending your weekend with your gf and family or clicking buttons on children video game events full of acne teenagers? "
 ];
 
