--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ var part4 = [
     , "You are more addicted in this game than Nails, Yuree and René together. Good job, my dude "
     , "You prefer wasting your weekends going to events full of acne idiots who havent taken a shower in weeks than studying maths. Good job dude "
     , "What is better, studying maths and getting rich or wasting your money playing a luck based meaningless children video game? "
-    , "You have more acne than Kingofmars and Chuppa Cross 5 together, thus making your statement is invalid "
+    , "You have more acne than Kingofmars and Chuppa Cross together, thus making your statement invalid "
     , "You are the kind of player who loses to italians in online tournaments and complains about ghosting "
     , "You are nothing but an addicted ladder hero who plays all day but has never won an important tournament "
     , "The only way someone as bad as you can win at this meaningless children video game is by clicking Rock Slide "
