--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@ var part4 = [
 var part5 = [
     , "¯\_(ツ)_/¯"
     , "ಠ_ಠ"
-    , "༼ຈل͜ຈ༽"
     , "( ͡ᵔ ͜ʖ ͡ᵔ )"
     , "(. ❛ ᴗ ❛.)"
     , "( ͡° ʖ̯ ͡°)"
     , "(ง’̀-‘́)ง"
     , "(凸 ͡° ͜ʖ ͡°)凸"
+    , "ლ(ಠ益ಠ)ლ"
     , "ʕ •ᴥ•ʔ"
 ];
       
