--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script>
 var part1 = [
       "Lol can you PLEASE shut the fuck up??? You are just a "
-    , "Who THE FUCL are you again? Cause I'm pretty sure you are a "
+    , "Who THE FUCK are you again? Cause I'm pretty sure you are a "
     , "LMFAO what is this idiot talking about? This guy is basically a "
     , "Sorry, but who do you think you are? You "
     , "Sorry if I'm being rude here, but who THE FUCK asked you? This guy is just a "
