--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@ var part4 = [
 var part5 = [
     , "¯\_(ツ)_/¯"
     , "ಠ_ಠ"
+    , "(凸 ͡° ͜ʖ ͡°)凸"
+    , "ლ(ಠ益ಠ)ლ"
+    , "(ง’̀-‘́)ง"
+    , "ʕ •ᴥ•ʔ"
+    , "( ͡° ʖ̯ ͡°)"
+    , "(ﾉಥ益ಥ"
 ];
       
 
