--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@ var part5 = [
     , "ლ(ಠ益ಠ)ლ"
     , "(ง’̀-‘́)ง"
     , "ʕ •ᴥ•ʔ"
-    , "( ͡° ʖ̯ ͡°)"
-    , "(ﾉಥ益ಥ"
+    , "(ﾉಥ益ಥ)"
 ];
       
 
