--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 
 <script>
 var part1 = [
-      "Lol can you PLEASE shut the fuck up??? You are just a "
+      "Next time use your brain before playing and typing on the internet, brother :) I believe you "
+    , "yeah yeah whatever dude =[] you are always complaining about hax and matchup, you "
+    , "Cool story bro, but no one here gives a fuck to that. IMO you are just some "
+    , "Lol can you PLEASE shut the fuck up??? You are just a "
     , "Who THE FUCK are you again? Cause I'm pretty sure you are a "
     , "LMFAO what is this idiot talking about? This guy is basically a "
     , "Sorry, but who do you think you are? You "
@@ -18,18 +21,19 @@ var part1 = [
 
 
 var part2 = [
-      "retarded VGC addicted faggot. "
+      "retarded addicted to children video game '''esportes'''. "
     , "piece of shit. "
-    , "scum of the earth. "
+    , "scum of the earth ladder hero. "
     , "weirdo addicted to children video games. "
-    , "loser who spends all of his time masturbating and smashing his head on random buttons of his 3DS. "
-    , "random player addicted to clicking Fake Out and Geomancy on a children video game. "
-    , "braindead monkey and an irrelevant Pokémon player. "
+    , "loser who spends all of his time masturbating and smashing his head on random buttons of his game. "
+    , "random player addicted to clicking easy to spam strategies on this boring children video game. "
+    , "braindead monkey and an irrelevant player of this game. "
     , "weebo full of acne. "
     , "cancerous fucker. "
     , "button smasher mongoloid. "
     , "dumbass who missed math classes to play a luck based children video game. "
     , "idiot who doesnt know basics math. "
+    , "beginner who only complains but never won any relevant tournament. "
 ];
 
 
@@ -48,26 +52,26 @@ var part3 = [
 
 
 var part4 = [
-      "Even Nails with his small as fuck brain could beat you in this game. "
-    , "You cant even beat ladder idiots spamming Ashton Cox's Xerneas Lunala team, so what the hell are you talking about? "
+      "Even a kid could beat you in this game. "
+    , "You cant even beat ladder idiots spamming noobs team, so what the hell are you talking about? "
     , "Please come back when you finally manage to win something relevant in this game. "
-    , "You are as predictable in this game as Wolfey leading Scarf Lando + Physical Attacker and switching one of them to Milotic. "
-    , "Even fucking Embc29 can beat you easily in this game by smashing his giant forehead in his 3DS. "
-    , "You are so dumb than not even DaWoblefet's Mechanics Monday can help you become a good player. "
-    , "You are basically as good in this game as Cased Victory is good with girls (hint: he is not good at all LOL). "
-    , "Smogon would have to literally ban every Pokémon in this game except Magikarp for you to be a top player LMAO. "
+    , "You are as predictable in this game as that weak af world champion. "
+    , "Even a beginner can beat you easily in this game by smashing his forehead in his console. "
+    , "You are so dumb than not even tryharding all day can help you become a good player. "
+    , "You are basically as good in this game as a the average player of this game is good with girls. "
+    , "They would literally have to ban everything in this game except Pikachu for you to be a top player LMAO. "
     , "Please come back when you can at least win an important tournament, kiddo. "
-    , "You literally played more Pokémon this weekend than me the entire month. Good job dude "
+    , "You literally played more video game this weekend than me the entire month. Good job dude "
     , "Why are you wasting your time talking shit about a luck based online children video game? "
-    , "You are about as good in this game as Yuree is a girl irl. "
-    , "Even Paul Chua randomly clicking Fake Out, Water Spout and Geomancy can beat you at this game, dude "
-    , "You are more addicted in this game than Nails, Yuree and René together. Good job, my dude "
-    , "You prefer wasting your weekends going to events full of acne idiots who havent taken a shower in weeks than studying maths. Good job dude "
+    , "You are about as good in this game as I am a girl irl. "
+    , "Even a beginner spamming moves can beat you at this game, dude "
+    , "You are more addicted in this game than all top players together. Good job, my dude "
+    , "You prefer wasting your weekends going to events full of idiots who havent taken a shower in weeks than studying maths. Good job dude "
     , "What is better, studying maths and getting rich or wasting your money playing a luck based meaningless children video game? "
-    , "You have more acne than Kingofmars and Chuppa Cross together, thus making your statement invalid "
+    , "You have more acne than half of the playerbase together, thus making your statement invalid "
     , "You are the kind of player who loses to italians in online tournaments and complains about ghosting "
     , "You are nothing but an addicted ladder hero who plays all day but has never won an important tournament "
-    , "The only way someone as bad as you can win at this meaningless children video game is by clicking Rock Slide "
+    , "The only way someone as bad as you can win at this meaningless children video game is by spamming RNG based attacks "
     , "What is better, spending your weekend with your gf and family or clicking buttons on children video game events full of acne teenagers? "
 ];
 
@@ -79,6 +83,9 @@ var part5 = [
     , "(ง’̀-‘́)ง"
     , "ʕ •ᴥ•ʔ"
     , "(ﾉಥ益ಥ)"
+    , ":[|]"
+    , ">:("
+    , "XD"
 ];
       
 
